# TSFM4Epi

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  base_requirements.in  entrypoint.sh  pyproject.toml  requirements-shared.txt  run-experiments.sh  setup-dev.sh
.devcontainer/: Dockerfile  devcontainer.json
data_extractor/: Dockerfile  README.md  __main__.py  requirements.in  requirements.txt  sinan_extractor.py
experiment-timesfm/: __main__.py  requirements.in
experiment_baseline/: __main__.py  requirements.in  requirements.txt  setup.sh
experiment_chronos/: __main__.py  requirements.in  requirements.txt  setup.sh
experiment_lagllama/: __main__.py  requirements.in  requirements.txt  setup.sh
experiment_moirai/: __main__.py  requirements.in  requirements.txt  setup.sh
experiment_moment/: requirements.in
experiment_timegpt/: __main__.py  requirements.in
experiment_timesfm/: __main__.py  requirements.in  requirements.txt  setup.sh
experiment_ttms/: __main__.py  requirements.in  requirements.txt  setup.sh  ttm_gluonts_predictor.py
report/: analyzing_reports.ipynb  dataset.ipynb  figures.ipynb  requirements.txt
src/data_extractor/: __main__.py  sinan_extractor.py
src/experiments/: tiny_timer_mixers.py
utils_exp/: __init__.py  cli.py  dummy_module.py  experiment_facade.py  splitter.py
